--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   },
   "devDependencies": {
     "@discordjs/docgen": "^0.12.1",
-    "@types/node": "^20.3.3",
-    "lerna": "^7.1.1",
+    "@types/node": "^20.4.2",
+    "lerna": "^7.1.4",
     "rimraf": "^5.0.1",
     "ts-mixer": "^6.0.3",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "globby": "^13.2.2",
+    "reciple": "^7.9.0"
   }
 }
