update create dependencies

--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -28,8 +28,11 @@
     "prompts": "^2.4.2"
   },
   "devDependencies": {
+    "@types/node": "^20.4.2",
     "discord.js": "^14.11.0",
-    "nodemon": "^2.0.22",
-    "reciple": "^7.9.1"
+    "nodemon": "^3.0.1",
+    "reciple": "^7.9.1",
+    "rimraf": "^5.0.1",
+    "typescript": "^5.1.6"
   }
 }
