--- a/packages/create-reciple/templates/javascript-esm/package.json
+++ b/packages/create-reciple/templates/javascript-esm/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "BIN_EXEC reciple",
-    "dev": "BIN_EXEC nodemon --ext js,mjs,cjs,json,yml,yaml --exec \"SCRIPT_RUN start\" --signal SIGHUP"
+    "start": "reciple",
+    "dev": "nodemon --ext js,mjs,cjs,json,yml,yaml --exec \"SCRIPT_RUN start\" --signal SIGHUP"
   },
   "dependencies": {
     "discord.js": "DISCORDJS",
