--- a/packages/create-reciple/templates/javascript/package.json
+++ b/packages/create-reciple/templates/javascript/package.json
@@ -2,8 +2,8 @@
   "name": "reciple-app",
   "private": true,
   "scripts": {
-    "start": "BIN_EXEC reciple",
-    "dev": "BIN_EXEC nodemon --ext js,mjs,cjs,json,yml,yaml --exec \"SCRIPT_RUN start\" --signal SIGHUP"
+    "start": "reciple",
+    "dev": "nodemon --ext js,mjs,cjs,json,yml,yaml --exec \"SCRIPT_RUN start\" --signal SIGHUP"
   },
   "dependencies": {
     "discord.js": "DISCORDJS",
