--- a/packages/create-reciple/templates/typescript-esm/package.json
+++ b/packages/create-reciple/templates/typescript-esm/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "BIN_EXEC rimraf ./modules && BIN_EXEC tsc",
-    "start": "BIN_EXEC reciple",
-    "build:start": "SCRIPT_RUN build && SCRIPT_RUN start",
-    "dev": "BIN_EXEC nodemon --ext ts,mts,cts,json,yml,yaml --exec \"SCRIPT_RUN build:start\" --signal SIGHUP"
+    "build": "rimraf ./modules && tsc",
+    "start": "reciple",
+    "build:start": "SCRIPT_RUN build && reciple",
+    "dev": "nodemon --ext ts,mts,cts,json,yml,yaml --exec \"SCRIPT_RUN build && reciple\" --signal SIGHUP"
   },
   "dependencies": {
     "discord.js": "DISCORDJS",
