--- a/packages/create-reciple/templates/typescript/package.json
+++ b/packages/create-reciple/templates/typescript/package.json
@@ -5,7 +5,7 @@
     "build": "rimraf ./modules && tsc",
     "start": "reciple",
     "build:start": "SCRIPT_RUN build && reciple",
-    "dev": "nodemon --ext ts,mts,cts,json,yml,yaml --exec \"SCRIPT_RUN build && reciple\" --signal SIGHUP"
+    "dev": "nodemon --ext ts,mts,cts,json,yml,yaml --ignore ./modules --exec \"SCRIPT_RUN build && reciple\" --signal SIGHUP"
   },
   "dependencies": {
     "discord.js": "DISCORDJS",
