--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -24,6 +24,7 @@
   ],
   "dependencies": {
     "@clack/prompts": "^0.6.3",
+    "@reciple/utils": "^7.0.0",
     "kleur": "^4.1.5",
     "prompts": "^2.4.2"
   },
