--- a/packages/reciple/tsconfig.json
+++ b/packages/reciple/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@reciple/utils/tsconfig.json",
   "include": ["./src/**/*"],
   "compilerOptions": {
     "rootDir": "./src",
