--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "clean": "npx rimraf ./dist",
     "build": "npm run clean && npx tsc",
-    "docs": "npx reciple-docgen -i ./src/index.ts -o ./docs/docs.json"
+    "docs": "node ../docgen/dist/bin.mjs -i ./src/index.ts -o ./docs/docs.json"
   },
   "files": [
     "dist",
