--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -47,14 +47,15 @@
     "micromatch": "^4.0.5",
     "prompts": "^2.4.2",
     "semver": "^7.5.4",
-    "yaml": "^2.3.1"
+    "typescript": "^5.2.2",
+    "yaml": "^2.3.2"
   },
   "devDependencies": {
     "@types/lodash.mergewith": "^4.6.7",
     "@types/micromatch": "^4.0.2",
     "@types/prompts": "^2.4.4",
-    "@types/semver": "^7.5.0",
-    "discord.js": "^14.12.1"
+    "@types/semver": "^7.5.2",
+    "discord.js": "^14.13.0"
   },
   "peerDependencies": {
     "discord.js": "^14.7.1"
