--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -38,5 +38,8 @@
   "dependencies": {
     "@discordjs/collection": "^1.5.2",
     "fallout-utility": "^2.7.1"
+  },
+  "devDependencies": {
+    "discord.js": "^14.13.0"
   }
 }
