--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "clean": "npx rimraf ./dist",
     "build": "npm run clean && npx tsc",
-    "docs": "node ../docgen/dist/bin.mjs -i ./src/index.ts -o ./docs/docs.json"
+    "docs": "node ../docgen/dist/bin.js -i ./src/index.ts -o ./docs/docs.json"
   },
   "files": [
     "dist",
