--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "clean": "npx rimraf ./bin",
     "build": "npm run clean && npx tsc",
-    "docs": "node ../docgen/dist/bin.mjs -i ./src/exports.ts -o ./docs/docs.json"
+    "docs": "node ../docgen/dist/bin.js -i ./src/exports.ts -o ./docs/docs.json"
   },
   "files": [
     "bin",
