--- a/packages/reciple/tsconfig.json
+++ b/packages/reciple/tsconfig.json
@@ -3,7 +3,7 @@
   "include": ["./src/**/*"],
   "compilerOptions": {
     "rootDir": "./src",
-    "outDir": "./bin",
+    "outDir": "./dist",
     "declaration": true
   }
 }
