--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -41,7 +41,7 @@
     "README.md"
   ],
   "dependencies": {
-    "@reciple/client": "^7.8.7",
+    "@reciple/core": "^7.8.7",
     "@reciple/update-checker": "^7.2.2",
     "@reciple/utils": "^7.1.2",
     "commander": "^11.0.0",
