--- a/packages/docgen/package.json
+++ b/packages/docgen/package.json
@@ -27,8 +27,8 @@
     }
   },
   "scripts": {
-    "clean": "npx rimraf ./dist",
-    "build": "npm run clean && npx tsc",
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && tsc",
     "docs": "node ./dist/bin.js -i ./src/index.ts -o ./docs/docs.json"
   },
   "files": [
