--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -4,20 +4,27 @@
   "license": "GPL-3.0",
   "version": "7.11.12",
   "type": "module",
-  "types": "./bin/bin.d.ts",
-  "bin": "./bin/bin.js",
+  "types": "./dist/index.d.ts",
+  "module": "./dist/index.js",
+  "bin": "./dist/bin.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/FalloutStudios",
     "directory": "packages/create-reciple"
   },
   "scripts": {
-    "clean": "npx rimraf ./bin",
-    "build": "npm run clean && npx tsc"
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && tsc",
+    "docs": ""
   },
   "files": [
-    "bin",
-    "templates.json",
+    "dist",
     "templates",
     "assets",
     "README.md"
@@ -25,8 +32,8 @@
   "dependencies": {
     "@clack/prompts": "^0.7.0",
     "@reciple/utils": "^7.1.2",
-    "kleur": "^4.1.5",
-    "prompts": "^2.4.2"
+    "commander": "^11.0.0",
+    "fallout-utility": "^2.7.1"
   },
   "devDependencies": {
     "@types/node": "^20.6.3",
