--- a/packages/create-reciple/templates/cts/package.json
+++ b/packages/create-reciple/templates/cts/package.json
@@ -1,11 +1,12 @@
 {
   "name": "reciple-app",
+  "type": "commonjs",
   "private": true,
   "scripts": {
     "build": "rimraf ./modules && tsc",
-    "start": "reciple",
-    "build:start": "SCRIPT_RUN build && reciple",
-    "dev": "nodemon --ext ts,mts,cts,json,yml,yaml --ignore ./modules --exec \"SCRIPT_RUN build && reciple\" --signal SIGHUP"
+    "start": "reciple -c reciple.cjs",
+    "build:start": "SCRIPT_RUN build && reciple -c reciple.cjs",
+    "dev": "nodemon --ext ts,mts,cts,json --ignore ./modules --exec \"SCRIPT_RUN build && reciple -c reciple.cjs\" --signal SIGHUP"
   },
   "dependencies": {
     "discord.js": "DISCORDJS",
