--- a/packages/create-reciple/templates/mts/package.json
+++ b/packages/create-reciple/templates/mts/package.json
@@ -1,12 +1,12 @@
 {
   "name": "reciple-app",
-  "private": true,
   "type": "module",
+  "private": true,
   "scripts": {
     "build": "rimraf ./modules && tsc",
-    "start": "reciple",
-    "build:start": "SCRIPT_RUN build && reciple",
-    "dev": "nodemon --ext ts,mts,cts,json,yml,yaml --ignore ./modules --exec \"SCRIPT_RUN build && reciple\" --signal SIGHUP"
+    "start": "reciple -c reciple.mjs",
+    "build:start": "SCRIPT_RUN build && reciple -c reciple.mjs",
+    "dev": "nodemon --ext ts,mts,cts,json --ignore ./modules --exec \"SCRIPT_RUN build && reciple -c reciple.mjs\" --signal SIGHUP"
   },
   "dependencies": {
     "discord.js": "DISCORDJS",
