--- a/packages/npm-loader/package.json
+++ b/packages/npm-loader/package.json
@@ -25,8 +25,8 @@
     }
   },
   "scripts": {
-    "clean": "npx rimraf ./dist",
-    "build": "npm run clean && npx tsc",
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && tsc",
     "docs": "node ../docgen/dist/bin.js -i ./src/module.ts -o ./docs/docs.json"
   },
   "files": [
