--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -31,8 +31,8 @@
     }
   },
   "scripts": {
-    "clean": "npx rimraf ./dist",
-    "build": "npm run clean && npx tsc",
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && tsc",
     "docs": "node ../docgen/dist/bin.js -i ./src/exports.ts -o ./docs/docs.json"
   },
   "files": [
