--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -24,8 +24,8 @@
     "./tsconfig.json": "./assets/tsconfig.json"
   },
   "scripts": {
-    "clean": "npx rimraf ./dist",
-    "build": "npm run clean && npx tsc",
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && tsc",
     "docs": "node ../docgen/dist/bin.js -i ./src/index.ts -o ./docs/docs.json"
   },
   "files": [
