--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -41,7 +41,6 @@
     "README.md"
   ],
   "dependencies": {
-    "@reciple/core": "^8.0.0-dev.1",
     "@reciple/update-checker": "^8.0.0-dev.1",
     "@reciple/utils": "^8.0.0-dev.0",
     "commander": "^11.0.0",
@@ -55,12 +54,14 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@reciple/core": "^8.0.0-dev.1",
     "@types/lodash.mergewith": "^4.6.7",
     "@types/micromatch": "^4.0.3",
     "@types/semver": "^7.5.3",
     "discord.js": "^14.13.0"
   },
   "peerDependencies": {
+    "@reciple/core": "^8.0.0",
     "discord.js": "^14.7.1"
   },
   "gitHead": "c5620aa5f046aa426b832c052a4f933817270573"
