what could go wrong

--- a/nx.json
+++ b/nx.json
@@ -25,6 +25,9 @@
       ]
     },
     "docs": {
+      "dependsOn": [
+        "^docs"
+      ],
       "outputs": [
         "{projectRoot}/docs/docs.json"
       ],
