--- a/example/package.json
+++ b/example/package.json
@@ -8,10 +8,10 @@
     "dev": "nodemon --ext js,mjs,cjs,json --exec \"reciple -c reciple.mjs\" --signal SIGHUP"
   },
   "dependencies": {
-    "@reciple/core": "^8.0.0-dev.2",
-    "@reciple/npm-loader": "^8.0.0-dev.3",
+    "@reciple/core": "^8.1.4",
+    "@reciple/npm-loader": "^8.0.1",
     "discord.js": "^14.13.0",
-    "reciple": "^8.0.0-dev.2"
+    "reciple": "^8.1.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.7",
