--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/FalloutStudios",
+    "url": "https://github.com/thenorthsolution/Reciple",
     "directory": "packages/core"
   },
   "exports": {
