--- a/packages/npm-loader/package.json
+++ b/packages/npm-loader/package.json
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/FalloutStudios",
+    "url": "https://github.com/thenorthsolution/Reciple",
     "directory": "packages/npm-loader"
   },
   "exports": {
