--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -16,7 +16,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/FalloutStudios",
+    "url": "https://github.com/thenorthsolution/Reciple",
     "directory": "packages/reciple"
   },
   "exports": {
