--- a/packages/update-checker/package.json
+++ b/packages/update-checker/package.json
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/FalloutStudios",
+    "url": "https://github.com/thenorthsolution/Reciple",
     "directory": "packages/update-checker"
   },
   "exports": {
