--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/FalloutStudios",
+    "url": "https://github.com/thenorthsolution/Reciple",
     "directory": "packages/utils"
   },
   "exports": {
