--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,7 @@
   "exact": false,
   "preid": "dev",
   "preDistTag": "dev",
-  "gitTagVersion": true
+  "gitTagVersion": true,
+  "signGitTag": true,
+  "signGitCommit": true
 }
