--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,7 +37,9 @@
   "dependencies": {
     "@reciple/utils": "^8.0.4",
     "@sapphire/shapeshift": "^3.9.3",
+    "@types/lodash": "^4.14.201",
     "fallout-utility": "^2.8.0",
+    "lodash": "^4.17.21",
     "semver": "^7.5.4",
     "ts-mixer": "^6.0.2"
   },
