--- a/packages/update-checker/package.json
+++ b/packages/update-checker/package.json
@@ -36,9 +36,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@types/semver": "^7.5.5",
-    "axios": "^1.6.1",
     "package-json": "^8.1.1",
     "semver": "^7.5.4"
+  },
+  "devDependencies": {
+    "@types/semver": "^7.5.5"
   }
 }
