--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -49,13 +49,12 @@
     "globby": "^14.0.0",
     "micromatch": "^4.0.5",
     "prompts": "^2.4.2",
-    "semver": "^7.5.4",
-    "typescript": "^5.2.2"
+    "semver": "^7.5.4"
   },
   "devDependencies": {
     "@reciple/core": "^8.2.5",
-    "@types/micromatch": "^4.0.5",
-    "@types/semver": "^7.5.5",
+    "@types/micromatch": "^4.0.6",
+    "@types/semver": "^7.5.6",
     "discord.js": "^14.14.1"
   },
   "peerDependencies": {
