update release and docs workflow

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,8 +1,10 @@
 name: Generate Docs
+
 on:
+
   push:
-    paths:
-      - 'packages/*/**'
+    branches: ['main']
+    paths: ['packages/*/src/**']
     tags: ['**']
   workflow_dispatch:
 concurrency:
