--- a/packages/docgen/package.json
+++ b/packages/docgen/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@discordjs/collection": "^2.0.0",
+    "@reciple/utils": "^8.2.1",
     "commander": "^12.0.0",
     "typedoc": "^0.25.12",
     "typedoc-json-parser": "^9.0.1"
