--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm install
 
       - name: Build Docgen
-        run: npm run build -w @reciple/docgen
+        run: npm run build -w @reciple/utils -w @reciple/docgen
 
       - name: Build docs.json
         run: npm run docs
