--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ../packages/reciple/dist/bin.mjs --watch -c ./reciple.mjs",
     "shard": "node shards.js -c reciple.mjs",
-    "dev": "nodemon --ext js,mjs,cjs,json --exec \"node ../packages/reciple/dist/bin.mjs -c reciple.mjs\" --signal SIGHUP"
+    "dev": "nodemon --ext js,mjs,cjs,json --exec \"node ../packages/reciple/dist/bin.mjs -c reciple.mjs\" --signal SIGHUP",
+    "example": "npm i"
   },
   "dependencies": {
     "@reciple/core": "^8.1.4",
