--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,9 +4,9 @@
   "homepage": "https://reciple.js.org/docs/client",
   "license": "GPL-3.0",
   "version": "8.4.2",
-  "main": "./dist/index.js",
   "module": "./dist/esm.mjs",
   "types": "./dist/index.d.ts",
+  "type": "module",
   "keywords": [
     "reciple",
     "discord.js",
@@ -21,8 +21,7 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/esm.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js"
     }
   },
   "scripts": {
