--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://reciple.js.org/docs/client",
   "license": "GPL-3.0",
   "version": "8.4.2",
-  "module": "./dist/esm.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
   "keywords": [
