--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://reciple.js.org/docs/reciple",
   "license": "GPL-3.0",
   "version": "8.4.2",
-  "module": "./dist/esm.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": "./dist/bin.js",
   "type": "module",
