--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -4,7 +4,7 @@
   "license": "GPL-3.0",
   "version": "8.3.0",
   "main": "./dist/index.js",
-  "module": "./dist/esm.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "keywords": [
     "reciple",
@@ -18,7 +18,7 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/esm.mjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.js"
     },
     "./tsconfig.json": "./assets/tsconfig.json"
