--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "lerna": "^8.1.3",
     "rimraf": "^5.0.7",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "nodemon": "^3.1.1"
   }
 }
