--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,7 @@
   "description": "Reciple core implementations",
   "homepage": "https://reciple.js.org/docs/client",
   "license": "GPL-3.0",
-  "version": "8.4.2",
+  "version": "9.0.0-dev.0",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
@@ -34,7 +34,7 @@
     "README.md"
   ],
   "dependencies": {
-    "@reciple/utils": "^8.3.0",
+    "@reciple/utils": "^9.0.0-dev.0",
     "@sapphire/shapeshift": "^4.0.0",
     "fallout-utility": "^2.9.1",
     "lodash": "^4.17.21",
