--- a/packages/reciple/package.json
+++ b/packages/reciple/package.json
@@ -3,7 +3,7 @@
   "description": "Reciple is a Discord.js bot framework",
   "homepage": "https://reciple.js.org/docs/reciple",
   "license": "GPL-3.0",
-  "version": "8.4.2",
+  "version": "9.0.0-dev.0",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": "./dist/bin.js",
@@ -41,7 +41,7 @@
   ],
   "dependencies": {
     "@reciple/update-checker": "^9.1.0",
-    "@reciple/utils": "^8.3.0",
+    "@reciple/utils": "^9.0.0-dev.0",
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "fallout-utility": "^2.9.1",
@@ -51,7 +51,7 @@
     "semver": "^7.6.2"
   },
   "devDependencies": {
-    "@reciple/core": "^8.4.2",
+    "@reciple/core": "^9.0.0-dev.0",
     "@types/micromatch": "^4.0.7",
     "@types/semver": "^7.5.8",
     "discord.js": "^14.15.2"
