--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "build": "lerna run build",
     "watch": "tsc --watch --noEmit",
     "test": "npm run start -w example",
-    "publish-packages:dev": "lerna publish prerelease",
-    "publish-packages": "lerna publish",
+    "publish-dev": "lerna run build && lerna publish prerelease",
+    "publish-packages": "lerna run build && lerna publish",
     "docs": "rimraf -g ./packages/*/docs/docs.json && lerna run docs"
   },
   "devDependencies": {
