--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -34,7 +34,7 @@
     "README.md"
   ],
   "dependencies": {
-    "@reciple/utils": "^9.0.0-dev.2",
+    "@reciple/utils": "workspace:*",
     "@sapphire/shapeshift": "^4.0.0",
     "fallout-utility": "^2.9.1",
     "lodash": "^4.17.21",
