--- a/packages/docgen/package.json
+++ b/packages/docgen/package.json
@@ -40,7 +40,7 @@
   },
   "dependencies": {
     "@discordjs/collection": "^2.1.0",
-    "@reciple/utils": "^9.0.0-dev.2",
+    "@reciple/utils": "workspace:*",
     "commander": "^12.1.0",
     "typedoc": "^0.25.13",
     "typedoc-json-parser": "^10.0.0"
