--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -35,16 +35,16 @@
   ],
   "dependencies": {
     "@clack/prompts": "^0.7.0",
-    "@reciple/utils": "workspace:*",
+    "@reciple/utils": "^9.0.0-dev.2",
     "commander": "^12.1.0",
     "fallout-utility": "^2.9.1"
   },
   "devDependencies": {
-    "@reciple/core": "workspace:*",
+    "@reciple/core": "^9.0.0-dev.2",
     "@types/node": "^20.12.12",
     "discord.js": "^14.15.2",
     "nodemon": "^3.1.2",
-    "reciple": "workspace:*",
+    "reciple": "^9.0.0-dev.4",
     "rimraf": "^5.0.7",
     "typescript": "^5.4.5"
   }
