Revert "fix cli ig?"
This reverts commit 56b3eeedd8d23e9bff259d106668fa42cdc7eb98.

--- a/packages/create-reciple/package.json
+++ b/packages/create-reciple/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "types": "./dist/index.d.ts",
   "module": "./dist/index.js",
-  "bin": "./dist/bin.mjs",
+  "bin": "./dist/bin.js",
   "keywords": [
     "reciple",
     "template"
