--- a/packages/docgen/package.json
+++ b/packages/docgen/package.json
@@ -7,7 +7,7 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "reciple-docgen": "./dist/bin.mjs"
+    "reciple-docgen": "./dist/bin.js"
   },
   "keywords": [
     "reciple",
