--- a/example/package.json
+++ b/example/package.json
@@ -8,9 +8,9 @@
     "dev": "nodemon --ext js,mjs,cjs,json --exec \"node ../packages/reciple/dist/bin.js -c reciple.mjs\" --signal SIGHUP"
   },
   "dependencies": {
-    "@reciple/core": "^8.1.4",
+    "@reciple/core": "file:../packages/core",
     "discord.js": "^14.15.2",
-    "reciple": "^8.1.4"
+    "reciple": "file:../packages/reciple"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
